samples/_failures_safe/1761508480_fccd5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f55f7882.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_f55f7882.c:171:45: error: expected ‘;’ at end of input
  171 |         case TOKEN_EOF: printf("EOF"); break
      |                                             ^
      |                                             ;
./samples/SAFE/__tmp_f55f7882.c:171:9: error: expected declaration or statement at end of input
  171 |         case TOKEN_EOF: printf("EOF"); break
      |         ^~~~
./samples/SAFE/__tmp_f55f7882.c:171:9: error: expected declaration or statement at end of input
